--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
         condition: service_healthy
 
   backend:
-    build: ./backend
+    image: ghcr.io/rgj7/whoisrgj_blog-backend:latest
     restart: unless-stopped
     environment:
       DATABASE_URL: ${DATABASE_URL:?DATABASE_URL must be set in .env}
@@ -33,7 +33,7 @@ services:
       start_period: 15s
 
   frontend:
-    build: ./frontend
+    image: ghcr.io/rgj7/whoisrgj_blog-frontend:latest
     restart: unless-stopped
     depends_on:
       backend:
